--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,59 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>  
 
-    
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+
+
+</head>
+
+<body>
+
+    <header>
+        <img src="img/logo.png" id="logo">
+
+        <div class="nav-holder">
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+
+            <div class="icons">
+                <i class="fas fa-search"></i>
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+
+    </header>
+
+    <section>
+        <article>
+            <h1>
+                <span>North</span>
+                <span>Wave</span>
+            </h1>
+            <div class="info-holder">
+                <div class="number-indicator">
+                    <span>2</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam hic dolorem voluptate eos voluptatibus officia expedita omnis dolor sed ex deleniti assumenda, suscipit quis!</p>
+            </div>
+        </article>
+        <div class="main-img-holder">
+            <div class="slider-arrows">
+                <i class="fas fa-arrow-left"></i>
+                <i class="fas fa-arrow-right"></i>
+            </div>
+        </div>
+
+    </section>
+
+
 </body>
+
 </html>
