--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <section>
         <article>
             <h1>
-                <span>North</span>
-                <span>Wave</span>
+                <span>PORSCHE <br> 911</span>
+                <span>GT2</span>
             </h1>
             <div class="info-holder">
                 <div class="number-indicator">
                     <span>2</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam hic dolorem voluptate eos voluptatibus officia expedita omnis dolor sed ex deleniti assumenda, suscipit quis!</p>
+                <p>3.8-liter six-cylinder twin-turbo engine producing 700 hp, 553 lb-ft of torque and a top track speed of 211 mph.</p>
             </div>
         </article>
         <div class="main-img-holder">
