--- a/index.html
+++ b/index.html
@@ -40,24 +40,27 @@
     </header>
 
     <section class="page">
-        <article>
-            <h1>
-                <span>PORSCHE<br>911</span>
-                <span>GT2</span>
+        <article class="page__article article">
+
+            <h1 class="article__logo logo">
+                <span class="logo__text">PORSCHE<br>911</span>
+                <span class="logo__text--lg">GT2</span>
             </h1>
-            <div class="info-holder">
-                <div class="number-indicator">
+
+            <div class="article__description description">
+                <div class="description__number">
                     <span>2</span>
                 </div>
-                <p>3.8-liter six-cylinder twin-turbo engine producing 700 hp, 553 lb-ft of torque and a top track speed
+                <p class="description__text">3.8-liter six-cylinder twin-turbo engine producing 700 hp, 553 lb-ft of
+                    torque and a top track speed
                     of 211 mph.</p>
             </div>
         </article>
 
-        <div class="main-img-holder">
-            <div class="slider-arrows">
-                <i class="fas fa-arrow-left"></i>
-                <i class="fas fa-arrow-right"></i>
+        <div class="page__slider slider">
+            <div class="slider__arrows">
+                <i class="slider__item fas fa-arrow-left"></i>
+                <i class="slider__item fas fa-arrow-right"></i>
             </div>
         </div>
 
