--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
 
-            <div class="menu menu--icon">
+            <div class="menu--icon">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-bars"></i>
             </div>
